2005-07-12  Bruno coudoin  <bruno.coudoin@free.fr>

	Completed implementation of the group module. Should be usable now
	and as defined with Yves.
	I still need to rework the class module to use a single canvas object
	and use GTK layout instead of a fixed layout.
	This solved the I18N issue with text too large in buttons.
	
	* src/boards/python/admin/group_edit.py:
	* src/boards/python/admin/group_user_list.py:
	* src/boards/python/admin/module_users.py:
	* src/boards/python/admin/user_list.py:

2005-07-11  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/admin/class_edit.py: group edition start to works.
	* admin/group_edit.py: new file for group edition
	* admin/group_user_list.py: same
	* src/gcompris/gcompris.c: (gcompris_init): force fullscreen off in edit mode.
	

2005-07-10  Yves Combe  <yves@ycombe.net>

	board conf by profile, user/class db access.

	* src/boards/Makefile.am:
	* src/boards/py-gcompris-profile.h:
	* src/boards/py-mod-gcompris.c: (py_gcompris_get_board_conf):
	* src/boards/python/tuxpaint.py:
	* src/gcompris/gcompris_db.c: (gcompris_get_users_from_group),
	(gcompris_get_user_from_id), (gcompris_get_class_from_id),
	(gcompris_get_board_conf):
	* src/gcompris/gcompris_db.h:
	* src/gcompris/profile.h:

2005-07-10  Yves Combe  <yves@ycombe.net>

	profile C functions now complete, with missing files

	* src/boards/Makefile.am:
	* src/boards/py-gcompris-profile.c:
	(gcompris_new_pyGcomprisProfileObject),
	(pyGcomprisProfileType_dealloc), (pyGcomprisProfileType_getattr),
	(pyGcomprisProfileType_setattr):
	* src/boards/py-gcompris-profile.h:
	* src/boards/py-mod-gcompris.c: (py_gcompris_get_profile):
	* src/boards/python/tuxpaint.py:
	* src/gcompris/profile.h:

2005-07-10  Bruno coudoin  <bruno.coudoin@free.fr>

	group_list is now useable to create groups for classes
	it is not possible yet to assign students to groups.

	* src/boards/python/admin/class_edit.py:
	* src/boards/python/admin/module.py: